# BuildCheck

./: .gitignore  README.md  contact_submissions_test.json
.github/workflows/: contract-tests.yml
BuildCheck/: README.md
BuildCheck/API/: CMakeLists.txt  Dockerfile
BuildCheck/API/include/dto/: analyze_request.h  analyze_response.h
BuildCheck/API/include/routes/: analyze_route.h  register_routes.h
BuildCheck/API/include/services/: engine_client.h
BuildCheck/API/include/utils/: httplib.h
BuildCheck/API/src/: main.cpp
BuildCheck/API/src/routes/: analyze_route.cpp  register_routes.cpp
BuildCheck/API/src/services/: engine_client.cpp
BuildCheck/Client/CSS/: style.css
BuildCheck/Engine/: CMakeLists.txt  Dockerfile  README.md  engine_service.py  infer.py  requirements.txt
BuildCheck/Engine/src/: main.cpp
BuildCheck/Engine/src/routes/: analyze_route.cpp  register_routes.cpp
contracts/: engine_api.json  openapi.yaml
contracts/examples/: engine_request.json  engine_response.json
contracts/schemas/: analyze_request.schema.json  analyze_response.schema.json
deploy/: docker-compose.yml
deploy/env/: .env.example  .env.production.template
deploy/nginx/: nginx.conf
docs/diagrams/: architecture.md
docs/notes/: decisions.md
scripts/: build_all.sh  local_stack.ps1  run_local.sh  smoke_e2e_live.py  test_contracts.sh
tests/: requirements.txt
tests/contracts/: test_contracts.py  test_runtime_hardening.py
tests/integration/: test_contact_admin_integration.py  test_live_e2e.py
training/data/: README.md  dataset.yaml
training/scripts/: export_onnx.py  prepare_data.py
(+7 files in other folders)
